Normalize line endings and apply .gitignore/.gitattributes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.23.12",
