--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,22 @@
 # Node modules
-**/node_modules/
+node_modules/
 
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
 # Environment variables
-*.env
-frontend/.env
-backend/.env
-ai/.env
+.env
+.env.local
+.env.*.local
 
 # Build output
-frontend/dist/
-backend/dist/
+dist/
+build/
 
-# OS files
+# Optional: OS / IDE files
 .DS_Store
 Thumbs.db
-
-# IDE files
 .vscode/
 .idea/
-
-# Temporary files
-*.tmp
-*.swp
