--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1"
   },
